crates/teleport/tests/compile-fail/no_procedure_type.stderr
error: missing procedure type: expected `query`, `command`, or `form`
 --> tests/compile-fail/no_procedure_type.rs:6:1
  |
6 | #[remote]
  | ^^^^^^^^^
  |
  = note: this error originates in the attribute macro `remote` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `AppError`
 --> tests/compile-fail/no_procedure_type.rs:1:24
  |
1 | use teleport::{remote, AppError};
  |                        ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
